@@ -50,6 +50,10 @@ import java.util.concurrent.atomic.AtomicBoolean;
 import java.util.concurrent.atomic.AtomicInteger;
 import java.util.concurrent.locks.ReentrantReadWriteLock;
 
+import org.apache.commons.cli.CommandLine;
+import org.apache.commons.cli.GnuParser;
+import org.apache.commons.cli.Options;
+import org.apache.commons.cli.ParseException;
 import org.apache.commons.logging.Log;
 import org.apache.commons.logging.LogFactory;
 import org.apache.hadoop.conf.Configuration;
@@ -2433,7 +2437,7 @@ public class HRegionServer implements HRegionInterface,
     if (message != null) {
       System.err.println(message);
     }
-    System.err.println("Usage: java org.apache.hbase.HRegionServer start|stop");
+    System.err.println("Usage: java org.apache.hbase.HRegionServer start|stop [-D <conf.param=value>]");
     System.exit(0);
   }
 
@@ -2467,15 +2471,26 @@ public class HRegionServer implements HRegionInterface,
    */
   protected static void doMain(final String [] args,
       final Class<? extends HRegionServer> regionServerClass) {
-    if (args.length < 1) {
-      printUsageAndExit();
-    }
     Configuration conf = HBaseConfiguration.create();
 
-    // Process command-line args. TODO: Better cmd-line processing
-    // (but hopefully something not as painful as cli options).
-    for (String cmd: args) {
-      if (cmd.equals("start")) {
+    Options opt = new Options();
+    opt.addOption("D", true, "Override HBase Configuration Settings");
+    try {
+      CommandLine cmd = new GnuParser().parse(opt, args);
+
+      if (cmd.hasOption("D")) {
+        for (String confOpt : cmd.getOptionValues("D")) {
+          String[] kv = confOpt.split("=", 2);
+          if (kv.length == 2) {
+            conf.set(kv[0], kv[1]);
+            LOG.debug("-D configuration override: " + kv[0] + "=" + kv[1]);
+          } else {
+            throw new ParseException("-D option format invalid: " + confOpt);
+          }
+        }
+      }
+
+      if (cmd.getArgList().contains("start")) {
         try {
           // If 'local', don't start a region server here.  Defer to
           // LocalHBaseCluster.  It manages 'local' clusters.
@@ -2493,17 +2508,18 @@ public class HRegionServer implements HRegionInterface,
         } catch (Throwable t) {
           LOG.error( "Can not start region server because "+
               StringUtils.stringifyException(t) );
+          System.exit(-1);
         }
-        break;
+      } else if (cmd.getArgList().contains("stop")) {
+        throw new ParseException("To shutdown the regionserver run " +
+            "bin/hbase-daemon.sh stop regionserver or send a kill signal to" +
+            "the regionserver pid");
+      } else {
+        throw new ParseException("Unknown argument(s): " +
+            org.apache.commons.lang.StringUtils.join(cmd.getArgs(), " "));
       }
-
-      if (cmd.equals("stop")) {
-        printUsageAndExit("To shutdown the regionserver run " +
-          "bin/hbase-daemon.sh stop regionserver or send a kill signal to" +
-          "the regionserver pid");
-      }
-
-      // Print out usage if we get to here.
+    } catch (ParseException e) {
+      LOG.error("Could not parse", e);
       printUsageAndExit();
     }
   }
