@@ -440,6 +440,9 @@ Release 0.21.0 - Unreleased
                edits ordered by sequenceid
    HBASE-2843  Readd bloomfilter test over zealously removed by HBASE-2625 
    HBASE-2846  Make rest server be same as thrift and avro servers
+   HBASE-1511  Pseudo distributed mode in LocalHBaseCluster
+               (Nicolas Spiegelberg via Stack)
+         
 
   IMPROVEMENTS
    HBASE-1760  Cleanup TODOs in HTable
